Fixed height for header on mobile; made navigation button smaller

--- a/Lab2/index1.css
+++ b/Lab2/index1.css
@@ -152,8 +152,8 @@ h1,h2 {
 @media only screen and (max-width: 1000px) {
 
   .head-logo {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     vertical-align: top;
     position: relative;
     display: inline-block;
@@ -162,12 +162,12 @@ h1,h2 {
   }
 
   #logo {
-    width: 100%;
+    height: 50px;
   }
 
   .head-button {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     vertical-align: top;
     position: relative;
     display: inline-block;
@@ -204,7 +204,9 @@ h1,h2 {
 */
 
   #button {
-    width: 100%;
+    position: relative;
+    top: 10px;
+    height: 30px;
   }
 
   .left {
